# Fabrik-Codek

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-02-19-fulltext-meilisearch.md  2026-02-21-adaptive-task-router-design.md  2026-02-21-adaptive-task-router-plan.md
prompts/: docstring_generator.md  system_default.md
skills/fabrik-codek/: SKILL.md
src/: __init__.py
src/config/: settings.py
src/core/: __init__.py  competence_model.py  llm_client.py  personal_profile.py  strategy_optimizer.py  task_router.py
src/flywheel/: collector.py  logger.py  outcome_tracker.py  session_observer.py
src/interfaces/: api.py  cli.py  mcp_server.py
src/knowledge/: datalake_connector.py  fulltext_engine.py  graph_engine.py  graph_schema.py  hybrid_rag.py  rag.py
src/knowledge/extraction/: heuristic.py  llm_extractor.py  pipeline.py  transcript_extractor.py
tests/: test_api.py  test_cli.py  test_competence_model.py  test_extraction.py  test_flywheel.py  test_fulltext_engine.py  test_graph_engine.py  test_hybrid_rag.py  test_llm_client.py  test_mcp_server.py  test_outcome_tracker.py  test_personal_profile.py  test_rag.py  test_session_observer.py  test_strategy_optimizer.py  test_task_router.py
utils/: logger.py
