[project]
name = "fabrik-codek"
version = "0.1.0"
description = "Local AI dev assistant powered by Qwen - Claude Code's little brother"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Quantum Howl", email = "dev@quantumhowl.com" }
]
keywords = ["ai", "assistant", "code", "qwen", "ollama", "mcp"]

dependencies = [
    # LLM & Embeddings
    "ollama>=0.4.0",
    "sentence-transformers>=3.0.0",

    # Vector DB & RAG
    "chromadb>=0.5.0",
    "lancedb>=0.15.0",
    "networkx>=3.0",

    # CLI & Interface
    "rich>=13.0.0",
    "typer>=0.12.0",
    "prompt-toolkit>=3.0.0",

    # Web API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # MCP Server
    "mcp[cli]>=1.0.0",

    # HTTP Client
    "httpx>=0.28.0",

    # Data Processing
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aiofiles>=24.0.0",
    "watchfiles>=1.0.0",

    # Code Tools
    "ruff>=0.8.0",
    "black>=24.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
fabrik = "src.interfaces.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line too long (handled by black)
    "N806",   # uppercase variable in function (MockClient in tests)
    "E402",   # import not at top (conditional sys.path in logger)
    "UP042",  # str+Enum → StrEnum (breaks serialization)
    "UP036",  # version block (intentional UX check in status cmd)
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
